--- a/src/components/SiteNav/SiteNav.css
+++ b/src/components/SiteNav/SiteNav.css
@@ -1,11 +1,21 @@
-nav {
-  padding: 1rem;
+.nav {
+  padding: 0;
 }
 
 nav a {
   margin-right: 1rem;
+  font-size: 13px;
+  font-weight: 600;
+    xline-height: 15px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    color: #fff;
+    text-decoration: none;
+
+    padding: .5rem 0;
+    display: inline-block;
 }
 
 .active {
-  text-decoration: none;
+    border-bottom: 3px solid #fff;
 }
