--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,57 +1,34 @@
 header {
-  background: #f46b45;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #f46b45, #eea849);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #f46b45, #eea849); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: white;
-  padding: 1rem 1rem 0;
+  xbackground: #333333;  /* fallback for old browsers */
+  xcolor: white;
+  padding: 1rem 0;
   xbox-shadow: 0 4px 12px rgba(0,0,0,.08);
 }
 
 .alakazam header {
-background-color: #F012BE;
-background: #bc4e9c;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #B10DC9, #F012BE);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #B10DC9, #F012BE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #F012BE;
 }
 
 .machamp header {
-background-color: #FF4136;
-background: #f85032;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #e73827, #FF4136);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #e73827, #FF4136); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #FF4136;
 }
 
 .gengar header {
-background-color: #B10DC9;
-background: #673AB7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #85144b, #B10DC9);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #85144b, #B10DC9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #B10DC9;
 }
 
 .ninetales header {
-background-color: #FF4136;
-background: #cb2d3e;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #FF4136, #FF851B);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #FF4136, #FF851B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #FF851B;
 }
 
 .omastar header {
-background-color: #0074D9;
-background: #005C97;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #0074D9, #7FDBFF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #0074D9, #7FDBFF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #0074D9;
 }
 
 .porygon header {
-background-color: #AAAAAA;
-background: #757F9A;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #bbbbbb, #aaaaaa);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #bbbbbb, #aaaaaa); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #AAAAAA;
 }
 
 .scyther header {
-background-color: #3D9970;
-background: #3CA55C;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #3D9970, #2ECC40);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #3D9970, #2ECC40); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+xbackground-color: #2ECC40;
 }
