--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,14 @@
 header {
 font-family: Orbitron;
-margin-bottom: 2rem;
 color: #fff;
 }
 
 header h2 {
   margin: 0;
+}
+
+small {
+  font-size: 1rem;
 }
 
 .alakazam header,
