--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,8 +1,33 @@
 table {
-
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: 3rem;
 }
 
 th {
   position: sticky;
   top: 0;
+  font-weight: 600;
+}
+
+.table-wrap {
+  /* border-style: solid;
+  border-width: 1px;
+  border-color: rgba(0,0,0,.1);
+  border-radius: 3px; */
+}
+
+.table-wrap table {
+  xmargin: 0;
+}
+
+th {
+  border-bottom-style: dashed;
+  border-width: 1px;
+  border-top-style: dashed;
+}
+
+td {
+  border-bottom-style: dashed;
+  border-width: 1px;
 }
