--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,4 @@
-header h1,
-dd:last-child {
+header h1 {
 font-family: Orbitron;
 }
 
@@ -11,57 +10,82 @@ small {
   font-size: 1rem;
 }
 
-dl {
-  border-bottom-style: dashed;
-  border-right-style: dashed;
-  border-width: 1px;
-  border-top-style: dashed;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  text-align: center;
-  border-color: rgba(0,0,0,.2);
-  color: rgba(0,0,0,.7);
+.home .App {
+  background: #FF5F6D;
+  background: -webkit-linear-gradient(to bottom, #FF5F6D, #FFC371);
+  background: linear-gradient(to bottom, #FF5F6D, #FFC371);
 }
 
-dl:last-child {
-  border-right-style: none;
+.home .submit {
+  background: #FF5F6D;
 }
 
-dd {
-  line-height: 1.5;
+.home h1 {
+  background: -webkit-linear-gradient(#FF5F6D, #FFC371);
+ -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+}
+
+.raidboss th:nth-child(3),
+.raidboss th:nth-child(4),
+.raidboss th:nth-child(5),
+.raidboss td:nth-child(4),
+.raidboss td:nth-child(5),
+.raidboss td:nth-child(6) {
+  text-align: right;
 }
 
 .alakazam .App {
 background-color: #F012BE;
+background: -webkit-linear-gradient(to bottom, #F012BE, #85144b);
+background: linear-gradient(to bottom, #F012BE, #85144b);
 }
 
-.alakazam th:nth-child(3),
-.alakazam th:nth-child(4),
-.alakazam th:nth-child(5) {
-  text-align: right;
+.alakazam .submit {
+background-color: #F012BE;
 }
 
-.alakazam td:nth-child(4),
-.alakazam td:nth-child(5),
-.alakazam td:nth-child(6) {
-  text-align: right;
-}
 
 .machamp .App {
 background-color: #FF4136;
+background: -webkit-linear-gradient(to bottom, #FF4136, #FF851B);
+background: linear-gradient(to bottom, #FF4136, #FF851B);
+}
+
+.machamp .submit {
+  background-color: #FF4136;
 }
 
 .gengar .App {
+background-color: #B10DC9;
+background: -webkit-linear-gradient(to bottom, #B10DC9, #85144b);
+background: linear-gradient(to bottom, #B10DC9, #85144b);
+}
+
+.gengar .submit {
 background-color: #B10DC9;
 }
 
 .ninetales .App {
 background-color: #FF851B;
+background: -webkit-linear-gradient(to bottom, #FF851B, #FF4136);
+background: linear-gradient(to bottom, #FF851B, #FF4136);
+}
+
+.ninetales .submit {
+background-color: #FF851B;
 }
 
 .omastar .App {
 background-color: #0074D9;
+background: -webkit-linear-gradient(to bottom, #0074D9, #7FDBFF);
+background: linear-gradient(to bottom, #0074D9, #7FDBFF);
 }
+
+.omastar .submit {
+background-color: #0074D9;
+}
+
 
 .porygon .App {
 background-color: #AAAAAA;
