--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -31,3 +31,8 @@ td {
   border-bottom-style: dashed;
   border-width: 1px;
 }
+
+.raidboss th:nth-child(3),
+.raidboss td:nth-child(4) {
+  display: none;
+}
