--- a/src/components/SiteNav/SiteNav.css
+++ b/src/components/SiteNav/SiteNav.css
@@ -1,14 +1,14 @@
-.nav {
-
-}
-
 nav a {
-  margin-right: 1rem;
+
   text-decoration: none;
   padding: 0;
   display: inline-block;
   color: #333;
   font-weight: 400;
+}
+
+nav a:last-child {
+  margin-right: 0;
 }
 
 .logo {
