--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -60,4 +60,8 @@ td {
     background-color: red;
   }
 }
+
+@media screen and (min-width: 30em) {}
+@media screen and (min-width: 30em) and (max-width: 60em) {}
+@media screen and (min-width: 60em) {}
 */
