--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,6 @@ small {
 
 .logo {
   font-family: orbitron;
-  font-size: 1.25rem;
 }
 
 
@@ -124,10 +123,7 @@ font-family: Orbitron;
 }
 
 dl {
-  border-bottom-style: dashed;
-
   border-width: 1px;
-  border-top-style: dashed;
   text-align: center;
   border-color: rgba(0,0,0,.2);
   color: rgba(0,0,0,.7);
@@ -135,28 +131,18 @@ dl {
   flex-grow: 1;
 }
 
-dl:first-child {
-  border-right-style: dashed;
-}
-
-dl:last-child {
-  border-right-style: none;
-  border-top-style: none;
-}
-
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 60em) {
   dl {
     flex-grow: 0;
     border-right-style: dashed;
   }
-
   dl:last-child {
-    border-top-style: dashed;
+    flex-grow: 0;
+    border-right-style: none;
   }
 
 }
 
 dd {
-  line-height: 1.5;
-  margin: 0;
+  margin: 0 0 .25rem;
 }
