--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
+.logo,
 header h1 {
-font-family: Orbitron;
+font-family: var(--font-display);
 }
 
 header h2 {
@@ -10,11 +11,6 @@ small {
   font-size: 1rem;
 }
 
-.logo {
-  font-family: orbitron;
-}
-
-
 .home .App {
   background: #FF5F6D;
   background: -webkit-linear-gradient(to bottom, #FF5F6D, #FFC371);
@@ -22,7 +18,7 @@ small {
 }
 
 .home .submit {
-  background: #FF5F6D;
+  background-color: #FF5F6D;
 }
 
 .home h1 {
@@ -55,13 +51,13 @@ background-color: #85144b;
 }
 
 .machamp .App {
-background-color: #FF4136;
-background: -webkit-linear-gradient(to bottom, #FF4136, #FF851B);
-background: linear-gradient(to bottom, #FF4136, #FF851B);
+background-color: var(--fighting);
+background: -webkit-linear-gradient(to bottom, var(--fighting), #FF851B);
+background: linear-gradient(to bottom, var(--fighting), #FF851B);
 }
 
 .machamp .submit {
-  background-color: #FF4136;
+  background-color: var(--fighting);
 }
 
 .machamp .submit:hover {
@@ -118,27 +114,29 @@ background-color: #AAAAAA;
 background-color: #2ECC40;
 }
 
-dd:last-child {
+dd:first-child {
 font-family: Orbitron;
 }
 
 dl {
-  border-width: 1px;
+  text-transform: uppercase;
   text-align: center;
-  border-color: rgba(0,0,0,.2);
+  /* border-width: 1px;
+  border-color: rgba(0,0,0,.2); */
   color: rgba(0,0,0,.7);
   margin: 0;
   flex-grow: 1;
+  letter-spacing: var(--ls1);
 }
 
 @media screen and (min-width: 60em) {
   dl {
     flex-grow: 0;
-    border-right-style: dashed;
+    xborder-right-style: dashed;
   }
   dl:last-child {
     flex-grow: 0;
-    border-right-style: none;
+    xborder-right-style: none;
   }
 
 }
