--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 :root {
-  --psychic-color: #F012BE;
+  --base-font-size: 13px;
+  --base-spacing: 1rem;
+  --spacing2: .5rem;
+  --font-code: Consolas, monaco, monospace;
+  --font-code: 'Roboto Mono', monospace;
+  --font-display: Orbitron;
+  --white: #ffffff;
+  --dark-gray: #333333;
+  --bug: #2ECC40;
+  --electric: #FFDC00;
+  --fighting: #FF4136;
+  --fire: #FF851B;
+  --flying: #7FDBFF;
+  --ghost: #B10DC9;
+  --grass: #2ECC40;
+  --normal: #AAAAAA;
+  --psychic: #F012BE;
+  --poison: #B10DC9;
+  --water: #0074D9;
+  --lh-title: 1.5;
+  --fw4: 400;
+  --ls1: .1em;
+}
+
+.js-loading *,
+.js-loading *:before,
+.js-loading *:after {
+  animation-play-state: paused !important;
 }
 
 html {
@@ -12,6 +39,7 @@ min-height: 100vh;
 flex-direction: column;
 text-rendering: optimizeLegibility;
 -webkit-font-smoothing: antialiased;
+min-height: 100%;
 }
 
 .App {
@@ -19,14 +47,15 @@ transition: all .2s ease-in-out;
 }
 
 main {
-  background: #fff;
+  background-color: var(--white);
   box-shadow: 0 1px 8px 0 rgba(0,0,0,.2);
-  font-family: 'Roboto Mono', monospace;
+  font-family: var(--font-code);
+  font-size: var(--base-font-size);
 }
 
 h1,
 h2 {
-font-family: Orbitron;
+font-family: var(--font-display);
 }
 
 h2 {
@@ -35,26 +64,37 @@ h2 {
 }
 
 h3 {
-  margin-bottom: 1rem;
-  font-weight: 400;
+  margin-bottom: var(--base-spacing);
+  font-size: var(--base-font-size);
+  font-weight: var(--fw4);
 }
 
 .home h3 {
-  font-family: orbitron;
-  font-size: 1rem;
-  margin-bottom: 1rem;
-  font-weight: 400;
+  font-size: 1.5rem;
+  font-family: var(--font-display);
+  text-transform: uppercase;
+  letter-spacing: 1em;
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.hero p {
+  font-size: var(--base-font-size);
+}
+
+h3:empty {
+  display: none;
 }
 
 a {
-  font-size: .875rem;
-  color: #333;
+  font-size: var(--base-font-size);
+  color: var(--dark-gray);
   text-decoration: none;
   outline: none;
 }
 
 .link:focus {
-    outline: none;
+  outline: none;
 }
 
 th:empty,
@@ -63,51 +103,117 @@ td:empty {
 }
 
 .bug {
-  color: #2ECC40;
+  color: var(--bug);
 }
 
 .electric {
-  color: #FFDC00;
+  color: var(--electric);
 }
 
 .fighting {
-  color: #FF4136;
+  color: var(--fighting);
 }
 
 .fire {
-  color: #FF851B;
+  color: var(--fire);
 }
 
 .flying {
-  color: #7FDBFF;
+  color: var(--flying);
 }
 
 .ghost {
-  color: #B10DC9;
+  color: var(--ghost);
 }
 
-.grass,
-.grasspsychic {
-  color: #2ECC40;
+.grass {
+  color: var(--grass);
 }
 
 .normal {
-  color: #AAAAAA;
+  color: var(--normal);
 }
 
-.poison,
-.ghostpoison {
-  color: #B10DC9;
-}
-
-.psychic {
-  color: var(--psychic-color);
+.poison {
+  color: var(--poison);
 }
 
 .psychic {
-  xcolor: #F012BE;
+  color: var(--psychic);
 }
 
 .water {
-  color: #0074D9;
+  color: var(--water);
 }
+
+/* .home h3 {
+  font-family: var(--font-display);
+} */
+
+/* .perfect td {
+  font-family: var(--font-display);
+  font-size: 2rem;
+} */
+
+/*
+@media all and (max-width: 450px) {
+  :root {
+    --columns: 200px;
+    --base-margin: 15px;
+    --base-font-size: 20px;
+}
+*/
+
+/*  ANIMATIONS */
+
+@keyframes no-transform {
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.fadeInUp {
+  animation: no-transform .2s ease-out forwards;
+  transform: translateY(80vh);
+}
+
+.fadeIn {
+  animation: no-transform .2s ease-out forwards;
+  opacity: 0;
+  /* transform: translateY(-1rem); */
+}
+
+.fadeInDown {
+  animation: no-transform .2s ease-out forwards;
+  opacity: 0;
+  transform: translateY(1rem);
+}
+
+.perfectcp,
+.perfectcp-stat {
+  animation-delay: .3s;
+}
+.weatherboost,
+.weatherboost-stat {
+  animation-delay: .4s;
+}
+.prefers,
+.prefers-stat {
+  animation-delay: .5s;
+}
+
+.record-1 { animation-delay: .6s; }
+.record-2 { animation-delay: .7s; }
+.record-3 { animation-delay: .8s; }
+.record-4 { animation-delay: .9s; }
+.record-5 { animation-delay: 1s; }
+.record-6 { animation-delay: 1.1s; }
+
+.hero h1 {animation-delay: .2s;}
+.hero p {animation-delay: .3s;}
+
+/* .one td:nth-child(2),
+.one td:nth-child(4){
+  text-align: right;
+} */
