--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,30 @@
   --white: #ffffff;
   --dark-gray: #333333;
   --bug: #2ECC40;
+  --dragon: #001f3f;
+  --dark: #111111;
   --electric: #FFDC00;
   --fighting: #FF4136;
   --fire: #FF851B;
   --flying: #7FDBFF;
   --ghost: #B10DC9;
   --grass: #2ECC40;
+  --ground: #85144b;
+  --ice: #7FDBFF;
   --normal: #AAAAAA;
   --psychic: #F012BE;
   --poison: #B10DC9;
+  --steel: #AAAAAA;
   --water: #0074D9;
   --lh-title: 1.5;
   --fw4: 400;
   --ls1: .1em;
+
+  --blank-theme-color-1: #111111;
+  --blank-theme-color-2: #333333;
+
+  --perfect-theme-color-1: #111111;
+  --perfect-theme-color-2: #333333;
 
   --home-theme-color-1: #FF5F6D;
   --home-theme-color-2: #FFC371;
@@ -42,74 +53,98 @@
 
 }
 
+.blank-theme .App,
+.blank-theme h1,
+.blank-theme .submit,
+.blank-theme .submit:hover  {
+  --color-1: var(--blank-theme-color-1);
+  --color-2: var(--blank-theme-color-2);
+}
+
+.perfect-theme .App,
+.perfect-theme h1,
+.perfect-theme .submit,
+.perfect-theme .submit:hover  {
+  --color-1: var(--blank-theme-color-1);
+  --color-2: var(--blank-theme-color-2);
+}
+
 .home-theme .App,
 .home-theme h1,
 .home-theme .submit  {
-  --background-color-1: var(--home-theme-color-1);
-  --background-color-2: var(--home-theme-color-2);
+  --color-1: var(--home-theme-color-1);
+  --color-2: var(--home-theme-color-2);
 }
 
 .fighting-type-theme .App,
 .fighting-type-theme h1,
 .fighting-type-theme .submit,
 .fighting-type-theme .submit:hover  {
-  --background-color-1: var(--fighting-type-theme-color-1);
-  --background-color-2: var(--fighting-type-theme-color-2);
+  --color-1: var(--fighting-type-theme-color-1);
+  --color-2: var(--fighting-type-theme-color-2);
 }
 
 .fire-type-theme .App,
 .fire-type-theme h1,
 .fire-type-theme .submit,
 .fire-type-theme .submit:hover  {
-  --background-color-1: var(--fire-type-theme-color-1);
-  --background-color-2: var(--fire-type-theme-color-2);
+  --color-1: var(--fire-type-theme-color-1);
+  --color-2: var(--fire-type-theme-color-2);
 }
 
 .ghost-type-theme .App,
 .ghost-type-theme h1,
 .ghost-type-theme .submit,
 .ghost-type-theme .submit:hover  {
-  --background-color-1: var(--ghost-type-theme-color-1);
-  --background-color-2: var(--ghost-type-theme-color-2);
+  --color-1: var(--ghost-type-theme-color-1);
+  --color-2: var(--ghost-type-theme-color-2);
 }
 
 .psychic-type-theme .App,
 .psychic-type-theme h1,
 .psychic-type-theme .submit,
 .psychic-type-theme .submit:hover  {
-  --background-color-1: var(--psychic-type-theme-color-1);
-  --background-color-2: var(--psychic-type-theme-color-2);
+  --color-1: var(--psychic-type-theme-color-1);
+  --color-2: var(--psychic-type-theme-color-2);
 }
 
 .water-type-theme .App,
 .water-type-theme h1,
 .water-type-theme .submit,
 .water-type-theme .submit:hover  {
-  --background-color-1: var(--water-type-theme-color-1);
-  --background-color-2: var(--water-type-theme-color-2);
+  --color-1: var(--water-type-theme-color-1);
+  --color-2: var(--water-type-theme-color-2);
 }
 
 /* THEMEABLE BITS */
 
 .App {
   transition: all .2s ease-in-out;
-  background: var(--background-color-1);
-  background: -webkit-linear-gradient(to bottom, var(--background-color-1), var(--background-color-2));
-  background: linear-gradient(to bottom, var(--background-color-1), var(--background-color-2));
+  background: var(--color-1);
+  background: -webkit-linear-gradient(to bottom, var(--color-1), var(--color-2));
+  background: linear-gradient(to bottom, var(--color-1), var(--color-2));
 }
 
-h1 {
-  background: -webkit-linear-gradient(var(--background-color-1), var(--background-color-2));
+.home-theme h1 {
+  background: -webkit-linear-gradient(var(--color-1), var(--color-2));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
 }
 
+h1 {
+  color: var(--color-1);
+}
+
 .submit {
-  background-color: var(--background-color-1);
+  background-color: var(--color-1);
 }
 
 .submit:hover {
-  background-color: var(--background-color-2);
+  background-color: var(--color-2);
+}
+
+.active {
+  color: var(--color-1);
 }
 
 .js-loading *,
@@ -192,49 +227,23 @@ td:empty {
   display: none;
 }
 
-.bug {
-  color: var(--bug);
-}
-
-.electric {
-  color: var(--electric);
-}
-
-.fighting {
-  color: var(--fighting);
-}
-
-.fire {
-  color: var(--fire);
-}
-
-.flying {
-  color: var(--flying);
-}
-
-.ghost {
-  color: var(--ghost);
-}
-
-.grass {
-  color: var(--grass);
-}
-
-.normal {
-  color: var(--normal);
-}
-
-.poison {
-  color: var(--poison);
-}
-
-.psychic {
-  color: var(--psychic);
-}
-
-.water {
-  color: var(--water);
-}
+.bug * { color: var(--bug);}
+.dark * { color: var(--dark);}
+.dragon * { color: var(--dragon);}
+.electric * {color: var(--electric);}
+.fighting * {color: var(--fighting);}
+.fire * {color: var(--fire);}
+.flying * {color: var(--flying);}
+.ghost * {color: var(--ghost);}
+.grass * {color: var(--grass);}
+.ground * {color: var(--ground);}
+.ice * {color: var(--ice);}
+.normal * {color: var(--normal);}
+.poison * {color: var(--poison);}
+.psychic,
+.psychic * {color: var(--psychic);}
+.steel * {color: var(--steel);}
+.water * {color: var(--water);}
 
 /* .home h3 {
   font-family: var(--font-display);
@@ -302,6 +311,28 @@ td:empty {
 
 .hero h1 {animation-delay: .2s;}
 .hero p {animation-delay: .3s;}
+
+.perfect-theme table {
+  font-family: var(--font-display);
+  font-size: 3rem;
+}
+
+.perfect-theme th:nth-child(2),
+.perfect-theme td:nth-child(3) {
+  text-align: right;
+}
+
+.perfect-theme th {
+  border: 0;
+  font-size: 1rem;
+  text-transform: none;
+  color: var(--dark)
+}
+
+.perfect-theme td {
+  padding-bottom: 0;
+  border: 0;
+}
 
 /* .one td:nth-child(2),
 .one td:nth-child(4){
