--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,19 @@
   --dragon: #001f3f;
   --dark: #111111;
   --electric: #FFDC00;
+  --fairy: #fdb9e9;
   --fighting: #FF4136;
   --fire: #FF851B;
   --flying: #7FDBFF;
   --ghost: #B10DC9;
   --grass: #2ECC40;
-  --ground: #85144b;
+  --ground: #ab9842;
   --ice: #7FDBFF;
   --normal: #AAAAAA;
   --psychic: #F012BE;
+  --psychic: #f366b9;
   --poison: #B10DC9;
-  --steel: #AAAAAA;
+  --steel: #9eb7b8;
   --water: #0074D9;
   --lh-title: 1.5;
   --fw4: 400;
@@ -45,7 +47,7 @@
   --ghost-type-theme-color-1: #B10DC9;
   --ghost-type-theme-color-2: #85144b;
 
-  --psychic-type-theme-color-1: #F012BE;
+  --psychic-type-theme-color-1: var(--psychic);
   --psychic-type-theme-color-2: #85144b;
 
   --water-type-theme-color-1: #0074D9;
@@ -231,6 +233,7 @@ td:empty {
 .dark * { color: var(--dark);}
 .dragon * { color: var(--dragon);}
 .electric * {color: var(--electric);}
+.fairy * {color: var(--fairy);}
 .fighting * {color: var(--fighting);}
 .fire * {color: var(--fire);}
 .flying * {color: var(--flying);}
@@ -262,6 +265,34 @@ td:empty {
     --base-font-size: 20px;
 }
 */
+
+.perfect-theme table {
+  font-size: 1.25rem;
+}
+
+@media screen and (min-width: 30em) {
+
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+
+  .perfect-theme table {
+    font-size: 1.5rem;
+  }
+
+  .perfect-theme th {
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (min-width: 60em) {
+
+  .perfect-theme table {
+    font-size: 4em;
+  }
+
+}
 
 /*  ANIMATIONS */
 
@@ -314,19 +345,17 @@ td:empty {
 
 .perfect-theme table {
   font-family: var(--font-display);
-  font-size: 3rem;
+}
+
+.perfect-theme th {
+  border: 0;
+  text-transform: none;
+  color: var(--dark)
 }
 
 .perfect-theme th:nth-child(2),
 .perfect-theme td:nth-child(3) {
   text-align: right;
-}
-
-.perfect-theme th {
-  border: 0;
-  font-size: 1rem;
-  text-transform: none;
-  color: var(--dark)
 }
 
 .perfect-theme td {
