--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,7 @@
 /* THEMEABLE BITS */
 
 .App {
+  min-height: 100vh;
   transition: all .2s ease-in-out;
   background: var(--color-1);
   background: -webkit-linear-gradient(to bottom, var(--color-1), var(--color-2));
@@ -165,7 +166,7 @@ min-height: 100vh;
 flex-direction: column;
 text-rendering: optimizeLegibility;
 -webkit-font-smoothing: antialiased;
-min-height: 100%;
+/* min-height: 100%; */
 }
 
 main {
@@ -173,6 +174,7 @@ main {
   box-shadow: 0 1px 8px 0 rgba(0,0,0,.2);
   font-family: var(--font-code);
   font-size: var(--base-font-size);
+  min-height: 100vh;
 }
 
 h1,
@@ -270,6 +272,10 @@ td:empty {
   font-size: 1.25rem;
 }
 
+.perfect-theme th {
+  font-size: 1rem;
+}
+
 @media screen and (min-width: 30em) {
 
 }
@@ -278,10 +284,6 @@ td:empty {
 
   .perfect-theme table {
     font-size: 1.5rem;
-  }
-
-  .perfect-theme th {
-    font-size: 1rem;
   }
 
 }
